# MiniAgent

./: .gitignore  CMakeLists.txt  README.md
src/: agent.cpp  agent.h  llm_client.cpp  llm_client.h  main.cpp  stream_tool.cpp  stream_tool.h  tool.cpp  tool.h  types.h
src/stream_tools/: echo.cpp  echo.h  tts.cpp  tts.h
src/tools/: bash.cpp  bash.h  edit_file.cpp  edit_file.h  read_file.cpp  read_file.h  write_file.cpp  write_file.h
tests/: test_tools.cpp
